--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
+.DS_Store
 
 HW1/basicTransformStudy/build/
 
-HW1/basicTransformStudy/.DS_Store
-
-HW1/.DS_Store
-
-.DS_Store
+HW2/calib_odom/build/
